prevent word wrap of collection name in filter

--- a/src/components/styles/quotes.scss
+++ b/src/components/styles/quotes.scss
@@ -61,6 +61,9 @@
       color: $mutedColor;
       font-size: 90%;
       padding: 0 $cardHorzPadding;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
     }
 
     .collectionFilterClear {
